fixed search button misalignment

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -8,7 +8,7 @@
   margin: 5px 10px;
 }
 
-nav {
+.navigation {
   display: flex;
   justify-content: space-between;
 }
@@ -18,29 +18,31 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.search {
+.nav-search {
   width: 25%;
   height: 36px;
   position: relative;
   display: flex;
   margin: 5px 10px;
+  align-items: center;
 }
 
-.searchTerm {
-  width: 100%;
+.nav-searchTerm {
+  width: calc(100% - 40px);
   border: 2px solid black;
   border-right: none;
   padding: 5px;
   height: 20px;
   border-radius: 5px 0 0 5px;
   outline: none;
+  margin: 0;
 }
 
 .searchTerm:focus {
   color: #00b4cc;
 }
 
-.searchButton {
+.nav-searchButton {
   width: 40px;
   height: 33px;
   border: 2px solid black;
@@ -50,6 +52,7 @@ body {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
+  margin: 0;
 }
 .wrap {
   display: absolute;
@@ -87,4 +90,3 @@ body {
   color: #fff;
   cursor: pointer;
 }
-
